2009-10-14   D. V. Wiebe <getdata@ketiltrout.net>  svn:322
	* test/madd.c: Properly initialise E.
	
	* src/getdata.c (_GD_DoRaw): Don't assume size_t is signed.

	* src/flush.c (_GD_FlushFragment): Don't justify field names if they're very
	long.

	* bindings/f77/test/big_test95.f90: Use fixed width strings in array
	initialisations.

	* man/dirfile_alter_entry.3 man/dirfile_add_bit.3
	man/get_mfield_list_by_type.3 man/get_entry_type.3 man/get_nvectors.3
	man/dirfile_alter_bit.3 man/dirfile_cbopen.3 man/dirfile_rename.3
	man/dirfile_include.3 man/dirfile_add.3 man/dirfile-format.5
	man/get_field_list_by_type.3 man/get_mvector_list.3 man/dirfile_flush.3
	man/get_vector_list.3 man/get_entry.3 man/dirfile_madd_bit.3
	man/dirfile-encoding.5: Update.

2009-10-14   D. V. Wiebe <getdata@ketiltrout.net>  svn:321
	* internal.h: Add .ffname member to encoding_t.
	* parse.c (_GD_ParseDirective): Run through _gd_ef instead of hard-coding
	encoding names.

2009-10-14   D. V. Wiebe <getdata@ketiltrout.net>  svn:319
	GetData-0.6.0rc2:

	* bindings/f77/test/big_test.f: Fix typos.

	* bindings/idl/test/big_test.pro: Add scalar members to structure
	initialisations in tests 125 and 126.

	* bindings/idl/Makefile.am: Make sure .libs exists.

2009-10-13   D. V. Wiebe <getdata@ketiltrout.net>  svn:318
	* test/alter_polynom_coeff.c test/entry_raw_scalar.c
	test/entry_polynom_scalar.c test/entry_bit_scalar.c test/add.c
	test/entry_lincom_scalar.c test/entry_phase_scalar.c test/entry_bit.c:
	Update for scalar[] in gd_entry_t.

	* test/add_phase.c test/madd_phase.c test/get_phase.c: Update for long
	shift.

	* test/add_scalar.c alter_entry_scalar3.c alter_entry_scalar4.c
	alter_entry_scalar2n.c alter_entry_scalar2a.c: Added.

	* src/getdata.h.in: Use long int for phase shift in gd_entry_t.
	* src/parse.c (_GD_SetScalar): Use INT64 for shift internally.

	* src/internal.h src/getdata.h.in: Make scalar[] array public: moved from
	_gd_private_entry to gd_entry_t.