@@ -1,4 +1,10 @@
-2009-10-14   D. V. Wiebe <getdata@ketiltrout.net>  svn:322
+2009-10-16   D. V. Wiebe <getdata@ketiltrout.net>  svn:323
+	* internal.h: Fix spelling of GD_E_FORMAT_LITERAL.
+	* errors.c parse.c: Ditto.
+
+	* src/putdata.c: Don't assume size_t is signed.
+
+2009-10-16   D. V. Wiebe <getdata@ketiltrout.net>  svn:322
 	* test/madd.c: Properly initialise E.
 	
 	* src/getdata.c (_GD_DoRaw): Don't assume size_t is signed.
